--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - checkout
 
+      - setup_remote_docker:
+          version: 20.10.6
+
       - run:
           name: install dependencies
           command: |
@@ -31,13 +34,14 @@ jobs:
       - image: docker:17.05.0-ce-git
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.6
       - run :
           name: build docker image 
           command: | 
-            docker build --tag=NASA .
+            docker build --tag=astoimage .
             docker image ls 
-            docker run -p 5000:5000 NASA
+            docker run -p 5000:5000 astoimage
 
 
       #- run : 
