--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - run : 
           name: upload docker image 
           command : | 
+            export DOCKER_IMAGE_NAME=capstone-project
             echo "Docker ID and Image: ${DOCKER_IMAGE_NAME}" 
             docker login -u=${DOCKERHUBUSER_NAME} P=${DOCKERPASSWORD}
             docker tag ${DOCKER_IMAGE_NAME} ${DOCKERHUBUSER_NAME}/${DOCKER_IMAGE_NAME}:${CIRCLE_WORKFLOW_ID}
