--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,8 +113,10 @@ jobs:
       - run:
           name: deploy on kuberbetes
           command: |
-            kubectl apply -f deployment.yaml
+            kubectl apply -f deployment.yml
             kubectl get pod
+
+      
 
   LOADbalacer:
     docker:
@@ -141,6 +143,12 @@ jobs:
             --template-file file://cloudformation/loadbalancer.yml \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --region=us-east-1
+
+      - run :
+          name: deploy a loadbalancer service 
+          command: | 
+            kubectl apply -f service.yml
+            kubectl get svc
 
   cleanup:
     docker:
@@ -172,3 +180,10 @@ workflows:
     jobs:
       - build
       - upload_docker
+      - create_infrastructure
+      - LOADbalacer:
+          requires:
+            - create_infrastructure
+      - cleanup:
+          requires:
+            - LOADbalancer
