--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,27 +80,41 @@ jobs:
       - run: 
           name: Ensure cluster infra exists
           command : |
-            export PARAMETERS_FILE="cloudformation/clusterparameter.json"
-            export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
-            aws cloudformation deploy\
-            --template-file cloudformation/cluster.yml \
-            --stack-name "clusternode-${CIRCLE_WORKFLOW_ID:0:7}"" \
-            --parameters-overrides ${PARAMS[@]} \
-            --region=us-east-1 \
-            --capabilities CAPABILITY_NAMED_IAM
+            aws cloudformation \
+              create-stack --stack-name clusternode-${CIRCLE_WORKFLOW_ID:0:7}\
+              --template-body file://cloudformation/cluster.yml \
+              --parameters-overrides file://cloudformation/clusterparameter.json \
+              --region=us-east-1\
+              --capabilities CAPABILITY_NAMED_IAM
+
+          #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
+          #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
+          #aws cloudformation deploy\
+          #--template-file cloudformation/cluster.yml \
+          #--stack-name "clusternode-${CIRCLE_WORKFLOW_ID:0:7}"" \
+          #--parameters-overrides ${PARAMS[@]} \
+          #--region=us-east-1 \
+          #--capabilities CAPABILITY_NAMED_IAM
           no_output_timeout: 15m
 
       - run: 
           name: Ensure cluster infra exists
           command : |
-            export PARAMETERS_FILE="cloudformation/clusterparameter.json"
-            export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
-            aws cloudformation deploy\
-            --template-file cloudformation/node.yml \
-            --stack-name " workernode-${CIRCLE_WORKFLOW_ID:0:7}"\
-            --parameters-overrides ${PARAMS[@]}\
-            --region=us-east-1 \
-            --capabilities CAPABILITY_NAMED_IAM
+            aws cloudformation \
+              create-stack --stack-name workernode-${CIRCLE_WORKFLOW_ID:0:7}\
+              --template-body file://cloudformation/node.yml \
+              --parameters-overrides file://cloudformation/nodeparameter.json \
+              --region=us-east-1 \
+              --capabilities CAPABILITY_NAMED_IAM
+
+          #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
+          #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
+          #aws cloudformation deploy\
+          #--template-file cloudformation/node.yml \
+          #--stack-name " workernode-${CIRCLE_WORKFLOW_ID:0:7}"\
+          #--parameters-overrides ${PARAMS[@]}\
+          #--region=us-east-1 \
+          #--capabilities CAPABILITY_NAMED_IAM
 
       - run:
             name: Install aws-iam-authenticator
