--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ jobs:
               --parameters file://cloudformation/networkparameter.json \
               --region=us-east-1
 
+      - run: sleep 600;
+          #no_output_timeout: 10m
           #export PARAMETERS_FILE="cloudformation/networkparameter.json"
           #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
           #aws cloudformation deploy \
@@ -87,6 +89,7 @@ jobs:
               --region=us-east-1\
               --capabilities CAPABILITY_NAMED_IAM
 
+      - run: sleep 600;
           #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
           #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
           #aws cloudformation deploy\
@@ -95,7 +98,7 @@ jobs:
           #--parameters-overrides ${PARAMS[@]} \
           #--region=us-east-1 \
           #--capabilities CAPABILITY_NAMED_IAM
-          no_output_timeout: 15m
+          
 
       - run: 
           name: Ensure cluster infra exists
@@ -106,6 +109,7 @@ jobs:
               --parameters file://cloudformation/nodeparameter.json \
               --region=us-east-1 \
               --capabilities CAPABILITY_NAMED_IAM
+      - run: sleep 600;
 
           #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
           #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
