--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,6 @@ jobs:
               --template-body file://cloudformation/network.yml \
               --parameters file://cloudformation/networkparameter.json \
               --region=us-east-1
-            sleep 600
 
       #- run: 
        #   sleep 600
@@ -85,13 +84,13 @@ jobs:
       - run: 
           name: Ensure cluster infra exists
           command : |
+            no_output_timeout: 10m
             aws cloudformation \
               create-stack --stack-name clusternode-${CIRCLE_WORKFLOW_ID:0:7}\
               --template-body file://cloudformation/clusters.yml \
               --parameters file://cloudformation/clusterParameter.json \
               --region=us-east-1\
               --capabilities CAPABILITY_NAMED_IAM
-            sleep 1000
           #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
           #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
           #aws cloudformation deploy\
@@ -105,13 +104,13 @@ jobs:
       - run: 
           name: Ensure cluster infra exists
           command : |
+            no_output_timeout: 10m
             aws cloudformation \
               create-stack --stack-name workernode-${CIRCLE_WORKFLOW_ID:0:7}\
               --template-body file://cloudformation/node.yml \
               --parameters file://cloudformation/nodeparameter.json \
               --region=us-east-1 \
               --capabilities CAPABILITY_NAMED_IAM
-            sleep 600
 
           #export PARAMETERS_FILE="cloudformation/clusterparameter.json"
           #export PARAMS=($(jq -r '.Parameters[] | [.ParameterKey, .ParameterValue] | "\(.[0])=\(.[1])"' ${PARAMETERS_FILE}))
@@ -125,6 +124,7 @@ jobs:
       - run:
             name: Install aws-iam-authenticator
             command: |
+              no_output_timeout: 10m
               curl -o aws-iam-authenticator curl -o aws-iam-authenticator https://amazon-eks.s3-us-east-1.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
               sudo chmod +x ./aws-iam-authenticator
               sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
