--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,12 @@ jobs:
             sleep 600
             echo "Task Completed"
 
+      - run : 
+          name: wait for task to complete
+          command: |
+            aws cloudformation wait stack-create-complete \
+            --stack-name "networkinfra-${CIRCLE_WORKFLOW_ID:0:7"
+
       #- run: 
        #   sleep 600
         #  echo "Canceling workflow as too much time has elapsed"
