--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,15 @@ jobs:
 
   create_infrastructure:
     docker:
-      - image: amazon/aws-cli
+        - image: circleci/python:3.7
     steps:
       - checkout
-      #- run:
+      - run:
+          name: Install awscli and gettext-base
+          command: |
+            sudo pip3 install awscli
+            sudo apt-get install gettext-base
+        #- run:
        #   name : Ensure network infra exsists
         #  command : |
          #   aws cloudformation \
