--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,12 +140,12 @@ jobs:
           #--region=us-east-1 \
           #--capabilities CAPABILITY_NAMED_IAM
 
-      #- run:
-            #name: Install aws-iam-authenticator
-            #command: |
-              #curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
-              #sudo chmod +x ./aws-iam-authenticator
-              #sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
+      - run:
+            name: Install aws-iam-authenticator
+            command: |
+              curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator
+              sudo chmod +x ./aws-iam-authenticator
+              sudo mv ./aws-iam-authenticator /usr/local/bin/aws-iam-authenticator
 
       - run:
             name: Install kubectl
@@ -158,8 +158,8 @@ jobs:
             name: Connect to cluster
             command: |
               aws eks list-clusters > ~/cluster_name.txt
-              EXPORT CLUSTER_NAME = $(cat ~/cluster_name)
-              aws eks --region us-east-1 update-kubeconfig --name $CLUSTER_NAME
+              export CLUSTER_NAME=$(cat ~/cluster_name.txt)
+              aws eks --region us-east-1 update-kubeconfig --name Udacitycapstone-Cluster
 
       - run:
           name: deploy on kuberbetes
