--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,10 +194,10 @@ jobs:
           name: loadbalancer installation
           command: |
             aws cloudformation deploy\
-            --template-file /cloudformation/loadbalancer.yml \
+            --template-file cloudformation/loadbalancer.yml \
             --stack-name loadbalacer-${CIRCLECI_WORKFLOW_ID}\
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-            --region=us-east-1
+            --tags project=udapeople
 
       - run :
           name: deploy a loadbalancer Service
