--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,7 +194,7 @@ jobs:
           name: loadbalancer installation
           command: |
             aws cloudformation \
-              create-stack --stack-name loadbalacer-${CIRCLECI_WORKFLOW_ID}\\
+              create-stack --stack-name loadbalacer-${CIRCLECI_WORKFLOW_ID}\
               --template-body file://cloudformation/loadbalancer.yml\
               --region=us-east-1 \
 
